--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
       <div class="nav-wrapper container">  
         <a href="#" class="brand-logo">Roadmap to Anything</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="search.html"><i class="material-icons">search</i></a></li>
+            <li><a href="search.html"><i class="material-icons">search</a></li>
             <li><a hsref="roadmaps">My Roadmaps</a></li>
             <li><a href="app/auth/signup.html">Sign Up</a></li>
             <li><a href="app/auth/signin.html">Log In</a></li>
