--- a/client/app/roadmaps/content.html
+++ b/client/app/roadmaps/content.html
@@ -8,12 +8,11 @@
           <span class="card-title truncate"><b>{{ currentTitle }}</b></span>
           <p ng-bind="currentNodeDescription">This is the description of why this matters.</p>
           <ul>
-              <li ng-repeat="link in currentLinks"><a class="truncate" href="{{link}}">{{link}}</a></li>
+            <li ng-repeat="link in currentLinks"><a class="truncate" href="{{link}}">{{link}}</a></li>
           </ul>
         </div>
         <div class="card-action">
           <button class="link-box-btn btn" ng-click="submitCompletedNode()">Node Done</button>
-         <!--   -->
         </div>
       </div>
     </div>
@@ -39,12 +38,14 @@
   <div class="center-align connector"></div>
 
   </div>
-      <button class="link-box-btn btn doneBtn" ng-click="submitCompletedRoadmap()">Map Done</button>
+  <button class="link-box-btn btn doneBtn" ng-click="submitCompletedRoadmap()">Map Done</button>
 </div>
-  <div class="title-list container">
-    <div ng-repeat="node in renderedNodes">
-      <span class="node-description truncate node-title" ng-bind="node.title"> Title</span> 
-    </div>
 
+   <!-- Node Descriptions -->
+
+<div class="title-list container">
+  <div ng-repeat="node in renderedNodes">
+    <span class="node-description truncate node-title" ng-bind="node.title"> Title</span> 
   </div>
+</div>
 
